--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -27,5 +27,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
     - name: Install pipenv
+      run: |
         pip install pipenv
         pipenv install --dev
