--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,26 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v2.3.0
     hooks:
-    -   id: check-yaml
-    -   id: end-of-file-fixer
-    -   id: trailing-whitespace
-    -   id: double-quote-string-fixer
+      - id: check-yaml
+      - id: end-of-file-fixer
+      - id: trailing-whitespace
+      - id: double-quote-string-fixer
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.5.0
+    hooks:
+      - id: ruff
+        stages:
+            - pre-commit
+      - id: ruff-format
+        stages:
+            - pre-commit
+        args:
+            - "--exit-non-zero-on-fix"
+  - repo: https://github.com/PyCQA/pylint
+    rev: "v3.2.3"
+    hooks:
+      - id: pylint
+        stages:
+            - pre-commit
