--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,10 +23,16 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+
     - name: Install pipenv
       run: |
         pip install pipenv
         pipenv install --dev
+
+    - name: Lint and format
+      run: |
+        pipenv format
