--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
-DATABASE_USER="matias" # Ther user will be created when the container is up
-DATABASE_PASSWORD="mysecretpassword"
+DATABASE_USER= # Ther user will be created when the container is up
+DATABASE_PASSWORD=
 DATABASE_HOST="localhost"
 DATABASE_PORT=5432
 DATABASE_NAME="TURF"
