config: add sqlmodel

--- a/Pipfile
+++ b/Pipfile
@@ -8,7 +8,6 @@ fastapi = "*"
 uvicorn = "*"
 requests = "*"
 pre-commit = "*"
-pymongo = "*"
 motor = "*"
 python-jose = "*"
 jose = "*"
@@ -17,6 +16,9 @@ passlib = "*"
 bcrypt = "*"
 pypdf = "*"
 tabula-py = "*"
+sqlmodel = "*"
+psycopg2-binary = "*"
+pydantic-settings = "*"
 
 [dev-packages]
 ruff = "*"
