refactor: add user controller

--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,6 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-fastapi = "*"
 uvicorn = "*"
 requests = "*"
 pre-commit = "*"
@@ -19,6 +18,7 @@ tabula-py = "*"
 sqlmodel = "*"
 psycopg2-binary = "*"
 pydantic-settings = "*"
+fastapi = {extras = ["standard"], version = "*"}
 
 [dev-packages]
 ruff = "*"
