--- a/Pipfile
+++ b/Pipfile
@@ -19,10 +19,12 @@ sqlmodel = "*"
 psycopg2-binary = "*"
 pydantic-settings = "*"
 fastapi = {extras = ["standard"], version = "*"}
+pytest-cov = "==6.0.0"
 
 [dev-packages]
 ruff = "*"
 pylint = "*"
+pytest = "*"
 
 [requires]
 python_version = "3.10"
