fix(config): add coverage pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,48 @@ Homepage = "https://localhost:3000"
 Repository = "https://github.com/vazqueztomas/turf-backend"
 
 ######################
+# coverage configuration #
+######################
+[tool.coverage.run]
+source = [
+    "core",
+    "database",
+    "models",
+    "controllers",
+    "routes",
+    "schemas"
+]
+[tool.coverage.report]
+# Regexes for lines to exclude from consideration
+exclude_also = [
+    # Don't complain about missing debug-only code:
+    "def __repr__",
+    "if self\\.debug",
+
+    # Don't complain if tests don't hit defensive assertion code:
+    "raise AssertionError",
+    "raise NotImplementedError",
+
+    # Don't complain if non-runnable code isn't run:
+    "if 0:",
+    "if __name__ == .__main__.:",
+
+    # Don't complain about abstract methods, they aren't run:
+    "@(abc\\.)?abstractmethod",
+    ]
+
+
+[tool.coverage.xml]
+# Output file for the XML report
+output = "coverage.xml"
+
+[tool.coverage.html]
+# Directory to output the HTML report
+directory = "htmlcov"
+# Title for the HTML report
+title = "Coverage Report"
+
+######################
 # ruff configuration #
 ######################
 
