fix(config): add test in pipelines

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,3 +36,7 @@ jobs:
     - name: Lint and format
       run: |
         pipenv run format
+
+    - name: Run tests
+      run: |
+        pipenv run test
