--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -27,11 +27,19 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-
-    - name: Install pipenv
-      run: |
         pip install pipenv
         pipenv install --dev
+
+    - name: Set environment variables
+      env:
+        ENVIRONMENT: production
+        DB_NAME: ${{ secrets.DB_NAME }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_PORT: ${{ secrets.DB_PORT }}
+        DATABASE_URL: ${{ secrets.DATABASE_URL }}
+      run: echo "Environment variables set"
 
     - name: Lint and format
       run: |
