--- a/Pipfile
+++ b/Pipfile
@@ -7,14 +7,11 @@ name = "pypi"
 uvicorn = "*"
 requests = "*"
 pre-commit = "*"
-motor = "*"
-python-jose = "*"
 jose = "*"
 pyjwt = "*"
 passlib = "*"
 bcrypt = "*"
-pypdf = "*"
-tabula-py = "*"
+# pypdf = "*"
 sqlmodel = "*"
 psycopg2-binary = "*"
 pydantic-settings = "*"
@@ -29,7 +26,7 @@ pylint = "*"
 pytest = "*"
 
 [requires]
-python_version = "3.10"
+python_version = "3.12"
 
 [scripts]
 format = "pre-commit run --all-files"
