fix(config): install pypdf

--- a/Pipfile
+++ b/Pipfile
@@ -11,7 +11,7 @@ jose = "*"
 pyjwt = "*"
 passlib = "*"
 bcrypt = "*"
-# pypdf = "*"
+pypdf = "*"
 sqlmodel = "*"
 psycopg2-binary = "*"
 pydantic-settings = "*"
