fix(config): fix configurations for db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,15 @@ services:
         container_name: postgres
         restart: always
         environment:
-            POSTGRES_USER: ${DATABASE_USER}
-            POSTGRES_DB: ${DATABASE_NAME}
-            POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+            POSTGRES_USER: ${POSTGRES_USER}
+            POSTGRES_DB: ${POSTGRES_DATABASE}
+            POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
             TZ: '03' #Set local datetime (Argentina)
         volumes:
             - postgres_data:/var/lib/postgresql/data
 
         ports:
-            - ${DATABASE_PORT}:5432
+            - ${DB_PORT}:5432
 
 volumes:
     postgres_data:
