--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -1,17 +1,12 @@
 name: Semantic Release
 
 on:
-  pull_request:
+  push:
     branches:
       - main
-  workflow_run:
-    workflows: ["CI"]  # Nombre del workflow de CI, ajusta según sea necesario
-    types:
-      - completed
 
 jobs:
   release:
-    if: github.event.workflow_run.conclusion == 'success'
     runs-on: ubuntu-latest
     concurrency: release
     permissions:
