--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,8 @@
-DATABASE_USER= # Ther user will be created when the container is up
-DATABASE_PASSWORD=
-DATABASE_HOST="localhost"
-DATABASE_PORT=5432
-DATABASE_NAME="TURF"
-DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
+ENVIRONMENT="DEVELOPMENT"
+# Ther user will be created with the specified password once the container is up and running.
+POSTGRES_USER="user"
+POSTGRES_PASSWORD="password"
+POSTGRES_HOST="localhost"
+DB_PORT=5432
+POSTGRES_DATABASE="TURF"
+POSTGRES_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
