--- a/Pipfile
+++ b/Pipfile
@@ -34,4 +34,4 @@ python_version = "3.10"
 
 [scripts]
 format = "pre-commit run --all-files"
-test = "pytest --cov --cov-report term-missing:skip-covered --cov-report xml:coverage-report.xml --junitxml=coverage.xml ./tests"
+test = "pytest --cov=turf_backend --cov-report term-missing:skip-covered --cov-report xml:coverage-report.xml --junitxml=coverage.xml tests"
