--- a/Pipfile
+++ b/Pipfile
@@ -4,20 +4,20 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-uvicorn = "*"
-requests = "*"
-pre-commit = "*"
-jose = "*"
-pyjwt = "*"
-passlib = "*"
-bcrypt = "*"
-pypdf = "*"
-sqlmodel = "*"
-psycopg2-binary = "*"
-pydantic-settings = "*"
-fastapi = {extras = ["standard"], version = "*"}
+uvicorn = "==0.32.1"
+requests = "==2.32.3"
+pre-commit = "==4.0.1"
+jose = "==1.0.0"
+pyjwt = "==2.10.1"
+passlib = "==1.7.4"
+bcrypt = "==4.2.1"
+pypdf = "==5.1.0"
+sqlmodel = "==0.0.22"
+psycopg2-binary = "==2.9.10"
+pydantic-settings = "==2.6.1"
+fastapi = {extras = ["standard"], version = "==0.115.5"}
 pytest-cov = "==6.0.0"
-httpx = "*"
+httpx = "==0.28.0"
 pytest-mock = "==3.14.0"
 exceptiongroup = "==1.2.2"
 tomli = "==2.0.2"
@@ -25,10 +25,10 @@ beautifulsoup4 = "==4.12.3"
 loguru = "==0.7.2"
 
 [dev-packages]
-ruff = "*"
-pylint = "*"
+ruff = "==0.8.1"
+pylint = "==3.3.1"
 pytest = "==8.3.3"
-ipykernel = "*"
+ipykernel = "==6.29.5"
 
 [requires]
 python_version = "3.10"
