--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ exceptiongroup = "==1.2.2"
 tomli = "==2.0.2"
 beautifulsoup4 = "==4.12.3"
 loguru = "==0.7.2"
+fpdf = "*"
 
 [dev-packages]
 ruff = "==0.8.1"
