--- a/Pipfile
+++ b/Pipfile
@@ -4,30 +4,29 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-uvicorn = "*"
-requests = "*"
-pre-commit = "*"
-jose = "*"
-pyjwt = "*"
-passlib = "*"
-bcrypt = "*"
-pypdf = "*"
-sqlmodel = "*"
-psycopg2-binary = "*"
-pydantic-settings = "*"
-fastapi = {extras = ["standard"], version = "*"}
-pytest-cov = "==6.0.0"
-httpx = "*"
-pytest-mock = "==3.14.0"
+requests = "==2.32.3"
+pyjwt = "==2.10.1"
+passlib = "==1.7.4"
+bcrypt = "==4.2.1"
+pypdf = "==5.1.0"
+sqlmodel = "==0.0.22"
+psycopg2-binary = "==2.9.10"
+fastapi = {extras = ["standard"], version = "==0.115.6"}
 exceptiongroup = "==1.2.2"
 tomli = "==2.0.2"
 beautifulsoup4 = "==4.12.3"
 
 [dev-packages]
-ruff = "*"
-pylint = "*"
+ruff = "==0.9.1"
+pylint = "==3.3.3"
 pytest = "==8.3.3"
 ipykernel = "*"
+pytest-cov = "==6.0.0"
+pytest-mock = "==3.14.0"
+pre-commit = "==4.0.1"
+pydantic-settings = "==2.7.1"
+
+
 
 [requires]
 python_version = "3.10"
