--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ fastapi = {extras = ["standard"], version = "==0.115.6"}
 exceptiongroup = "==1.2.2"
 tomli = "==2.0.2"
 beautifulsoup4 = "==4.12.3"
+openai = "==1.59.7"
 
 [dev-packages]
 ruff = "==0.9.1"
@@ -25,8 +26,6 @@ pytest-cov = "==6.0.0"
 pytest-mock = "==3.14.0"
 pre-commit = "==4.0.1"
 pydantic-settings = "==2.7.1"
-
-
 
 [requires]
 python_version = "3.10"
