--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools"]
 
 [project]
 name = "turf-backend"
-requires-python = ">= 3.8"
+requires-python = ">= 3.12"
 dynamic = ["version", "readme"]
 authors = [{ name = 'Tomas Vazquez', email = "vazquezt2018@gmail.com" }]
 description = "Turf Backend API"
@@ -16,14 +16,7 @@ Repository = "https://github.com/vazqueztomas/turf-backend"
 # coverage configuration #
 ######################
 [tool.coverage.run]
-source = [
-    "core",
-    "database",
-    "models",
-    "controllers",
-    "routes",
-    "schemas"
-]
+source = ["core", "database", "models", "controllers", "routes", "schemas"]
 [tool.coverage.report]
 exclude_also = [
     "def __repr__",
@@ -36,7 +29,7 @@ exclude_also = [
     "if __name__ == .__main__.:",
 
     "@(abc\\.)?abstractmethod",
-    ]
+]
 
 
 [tool.coverage.xml]
@@ -68,7 +61,7 @@ exclude = [
     "dist",
     "site-packages",
     "venv",
-    "playground"
+    "playground",
 ]
 
 
