--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ tomli = "==2.0.2"
 beautifulsoup4 = "==4.12.3"
 requests-mock = "==1.12.1"
 bcrypt = "==4.3.0"
+pdfplumber = "*"
+pandas = "*"
 
 [dev-packages]
 ruff = "==0.9.1"
