--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ requires = ["setuptools"]
 [project]
 name = "turf-backend"
 requires-python = ">= 3.12"
-dynamic = ["version", "readme"]
+dynamic = ["version"]
 authors = [{ name = 'Tomas Vazquez', email = "vazquezt2018@gmail.com" }]
 description = "Turf Backend API"
 
