--- a/Pipfile
+++ b/Pipfile
@@ -8,9 +8,10 @@ passlib = "==1.7.4"
 pypdf = "==5.1.0"
 sqlmodel = "==0.0.22"
 psycopg2-binary = "==2.9.10"
-fastapi = {extras = ["standard"], version = "==0.115.6"}
+fastapi = {extras = ["standard"] }
 bcrypt = "==4.3.0"
 pdfplumber = "*"
+pydantic-settings = "==2.7.1"
 
 [dev-packages]
 ruff = "==0.9.1"
@@ -20,7 +21,6 @@ ipykernel = "*"
 pytest-cov = "==6.0.0"
 pytest-mock = "==3.14.0"
 pre-commit = "==4.0.1"
-pydantic-settings = "==2.7.1"
 
 [requires]
 python_version = "3.12"
