--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@
 annotated-types==0.7.0; python_version >= '3.8'
 anyio==4.11.0; python_version >= '3.9'
 bcrypt==4.3.0; python_version >= '3.8'
-beautifulsoup4==4.12.3; python_full_version >= '3.6.0'
 certifi==2025.10.5; python_version >= '3.7'
 cffi==2.0.0; python_full_version >= '3.9' and platform_python_implementation != 'PyPy'
 charset-normalizer==3.4.4; python_version >= '3.7'
@@ -10,7 +9,7 @@ click==8.3.0; python_version >= '3.10'
 cryptography==46.0.3; python_version >= '3.8' and python_full_version not in '3.9.0, 3.9.1'
 dnspython==2.8.0; python_version >= '3.10'
 email-validator==2.3.0
-exceptiongroup==1.2.2; python_version >= '3.7'
+exceptiongroup==1.3.0; python_version < '3.11'
 fastapi[standard]==0.115.6; python_version >= '3.8'
 fastapi-cli[standard]==0.0.14
 fastapi-cloud-cli==0.3.1
@@ -23,8 +22,6 @@ jinja2==3.1.6
 markdown-it-py==4.0.0; python_version >= '3.10'
 markupsafe==3.0.3; python_version >= '3.9'
 mdurl==0.1.2; python_version >= '3.7'
-numpy==2.2.6; python_version < '3.11'
-pandas==2.3.3; python_version >= '3.9'
 passlib==1.7.4
 pdfminer.six==20250506; python_version >= '3.9'
 pdfplumber==0.11.7; python_version >= '3.8'
@@ -34,32 +31,23 @@ pycparser==2.23; implementation_name != 'PyPy'
 pydantic[email]==2.12.3; python_version >= '3.9'
 pydantic-core==2.41.4; python_version >= '3.9'
 pygments==2.19.2; python_version >= '3.8'
-pyjwt==2.10.1; python_version >= '3.9'
 pypdf==5.1.0; python_version >= '3.8'
 pypdfium2==4.30.0; python_version >= '3.6'
-python-dateutil==2.9.0.post0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 python-dotenv==1.1.1; python_version >= '3.8'
 python-multipart==0.0.20
-pytz==2025.2
 pyyaml==6.0.3; python_version >= '3.8'
-requests==2.32.3; python_version >= '3.8'
-requests-mock==1.12.1; python_version >= '3.5'
 rich==14.2.0; python_full_version >= '3.8.0'
 rich-toolkit==0.15.1; python_version >= '3.8'
 rignore==0.7.1; python_version >= '3.8'
 sentry-sdk==2.42.1; python_version >= '3.6'
 shellingham==1.5.4; python_version >= '3.7'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
-soupsieve==2.8; python_version >= '3.9'
 sqlalchemy==2.0.44; python_version >= '3.7'
 sqlmodel==0.0.22; python_version >= '3.7'
 starlette==0.41.3; python_version >= '3.8'
-tomli==2.0.2; python_version >= '3.8'
 typer==0.20.0; python_version >= '3.8'
 typing-extensions==4.15.0; python_version < '3.11'
 typing-inspection==0.4.2; python_version >= '3.9'
-tzdata==2025.2; python_version >= '2'
 urllib3==2.5.0; python_version >= '3.9'
 uvicorn[standard]==0.38.0
 uvloop==0.22.1
