--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ fastapi = {extras = ["standard"] }
 bcrypt = "==4.3.0"
 pdfplumber = "*"
 pydantic-settings = "==2.7.1"
+requests = "==2.32.5"
 
 [dev-packages]
 ruff = "==0.9.1"
