--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 -i https://pypi.org/simple
+annotated-doc==0.0.3; python_version >= '3.8'
 annotated-types==0.7.0; python_version >= '3.8'
 anyio==4.11.0; python_version >= '3.9'
 bcrypt==4.3.0; python_version >= '3.8'
@@ -10,7 +11,7 @@ cryptography==46.0.3; python_version >= '3.8' and python_full_version not in '3.
 dnspython==2.8.0; python_version >= '3.10'
 email-validator==2.3.0
 exceptiongroup==1.3.0; python_version < '3.11'
-fastapi[standard]==0.115.6; python_version >= '3.8'
+fastapi[standard]==0.120.0; python_version >= '3.8'
 fastapi-cli[standard]==0.0.14
 fastapi-cloud-cli==0.3.1
 h11==0.16.0; python_version >= '3.8'
@@ -30,12 +31,14 @@ psycopg2-binary==2.9.10; python_version >= '3.8'
 pycparser==2.23; implementation_name != 'PyPy'
 pydantic[email]==2.12.3; python_version >= '3.9'
 pydantic-core==2.41.4; python_version >= '3.9'
+pydantic-settings==2.7.1; python_version >= '3.8'
 pygments==2.19.2; python_version >= '3.8'
 pypdf==5.1.0; python_version >= '3.8'
 pypdfium2==4.30.0; python_version >= '3.6'
-python-dotenv==1.1.1; python_version >= '3.8'
+python-dotenv==1.1.1; python_version >= '3.9'
 python-multipart==0.0.20
 pyyaml==6.0.3; python_version >= '3.8'
+requests==2.32.5; python_version >= '3.9'
 rich==14.2.0; python_full_version >= '3.8.0'
 rich-toolkit==0.15.1; python_version >= '3.8'
 rignore==0.7.1; python_version >= '3.8'
@@ -44,7 +47,7 @@ shellingham==1.5.4; python_version >= '3.7'
 sniffio==1.3.1; python_version >= '3.7'
 sqlalchemy==2.0.44; python_version >= '3.7'
 sqlmodel==0.0.22; python_version >= '3.7'
-starlette==0.41.3; python_version >= '3.8'
+starlette==0.48.0; python_version >= '3.9'
 typer==0.20.0; python_version >= '3.8'
 typing-extensions==4.15.0; python_version < '3.11'
 typing-inspection==0.4.2; python_version >= '3.9'
