--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ bcrypt = "==4.3.0"
 pdfplumber = "*"
 pydantic-settings = "==2.7.1"
 requests = "==2.32.5"
+beautifulsoup4 = "==4.14.2"
 
 [dev-packages]
 ruff = "==0.9.1"
