--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ annotated-doc==0.0.3; python_version >= '3.8'
 annotated-types==0.7.0; python_version >= '3.8'
 anyio==4.11.0; python_version >= '3.9'
 bcrypt==4.3.0; python_version >= '3.8'
+beautifulsoup4==4.14.2; python_full_version >= '3.7.0'
 certifi==2025.10.5; python_version >= '3.7'
 cffi==2.0.0; python_full_version >= '3.9' and platform_python_implementation != 'PyPy'
 charset-normalizer==3.4.4; python_version >= '3.7'
@@ -45,11 +46,12 @@ rignore==0.7.1; python_version >= '3.8'
 sentry-sdk==2.42.1; python_version >= '3.6'
 shellingham==1.5.4; python_version >= '3.7'
 sniffio==1.3.1; python_version >= '3.7'
+soupsieve==2.8; python_version >= '3.9'
 sqlalchemy==2.0.44; python_version >= '3.7'
 sqlmodel==0.0.22; python_version >= '3.7'
 starlette==0.48.0; python_version >= '3.9'
 typer==0.20.0; python_version >= '3.8'
-typing-extensions==4.15.0; python_version < '3.11'
+typing-extensions==4.15.0; python_version >= '3.9'
 typing-inspection==0.4.2; python_version >= '3.9'
 urllib3==2.5.0; python_version >= '3.9'
 uvicorn[standard]==0.38.0
