--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pdfplumber = "*"
 pydantic-settings = "==2.7.1"
 requests = "==2.32.5"
 beautifulsoup4 = "==4.14.2"
+python-jose = "==3.5.0"
 
 [dev-packages]
 ruff = "==0.9.1"
