--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.4.4; python_version >= '3.7'
 click==8.3.0; python_version >= '3.10'
 cryptography==46.0.3; python_version >= '3.8' and python_full_version not in '3.9.0, 3.9.1'
 dnspython==2.8.0; python_version >= '3.10'
+ecdsa==0.19.1; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5'
 email-validator==2.3.0
 exceptiongroup==1.3.0; python_version < '3.11'
 fastapi[standard]==0.120.0; python_version >= '3.8'
@@ -29,6 +30,7 @@ pdfminer.six==20250506; python_version >= '3.9'
 pdfplumber==0.11.7; python_version >= '3.8'
 pillow==12.0.0; python_version >= '3.10'
 psycopg2-binary==2.9.10; python_version >= '3.8'
+pyasn1==0.6.1; python_version >= '3.8'
 pycparser==2.23; implementation_name != 'PyPy'
 pydantic[email]==2.12.3; python_version >= '3.9'
 pydantic-core==2.41.4; python_version >= '3.9'
@@ -37,21 +39,24 @@ pygments==2.19.2; python_version >= '3.8'
 pypdf==5.1.0; python_version >= '3.8'
 pypdfium2==4.30.0; python_version >= '3.6'
 python-dotenv==1.1.1; python_version >= '3.9'
+python-jose==3.5.0; python_version >= '3.9'
 python-multipart==0.0.20
 pyyaml==6.0.3; python_version >= '3.8'
 requests==2.32.5; python_version >= '3.9'
 rich==14.2.0; python_full_version >= '3.8.0'
 rich-toolkit==0.15.1; python_version >= '3.8'
 rignore==0.7.1; python_version >= '3.8'
+rsa==4.9.1; python_version >= '3.6' and python_version < '4'
 sentry-sdk==2.42.1; python_version >= '3.6'
 shellingham==1.5.4; python_version >= '3.7'
+six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
 sniffio==1.3.1; python_version >= '3.7'
 soupsieve==2.8; python_version >= '3.9'
 sqlalchemy==2.0.44; python_version >= '3.7'
 sqlmodel==0.0.22; python_version >= '3.7'
 starlette==0.48.0; python_version >= '3.9'
 typer==0.20.0; python_version >= '3.8'
-typing-extensions==4.15.0; python_version >= '3.9'
+typing-extensions==4.15.0; python_version < '3.11'
 typing-inspection==0.4.2; python_version >= '3.9'
 urllib3==2.5.0; python_version >= '3.9'
 uvicorn[standard]==0.38.0
