--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,23 +1,55 @@
 repos:
+  - repo: https://github.com/tox-dev/pyproject-fmt
+    rev: 'v2.11.1'
+    hooks:
+      - id: pyproject-fmt
+
+  - repo: https://github.com/abravalheri/validate-pyproject
+    rev: v0.24.1
+    hooks:
+      - id: validate-pyproject
+
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.3.0
+    rev: v6.0.0
     hooks:
-      - id: check-yaml
-      - id: end-of-file-fixer
       - id: trailing-whitespace
+      - id: end-of-file-fixer
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    # Ruff version.
-    rev: v0.5.0
+    rev: 'v0.14.7'
     hooks:
-      - id: ruff
-        stages:
-            - pre-commit
-      - id: ruff-format
-        stages:
-            - pre-commit
-  - repo: https://github.com/PyCQA/pylint
-    rev: "v3.2.3"
+      - id: ruff-check
+        name: ruff
+        args: ['--fix']
+
+  - repo: https://github.com/PyCQA/bandit
+    rev: 1.9.2
+    hooks:
+      - id: bandit
+        args: ['-r', '-lll']
+
+  - repo: https://github.com/pylint-dev/pylint
+    rev: v4.0.3
     hooks:
       - id: pylint
-        stages:
-            - pre-commit
+        types: [python]
+        additional_dependencies:
+          - loguru==0.7.3
+          - pydantic==2.12.4
+          - pydantic-settings==2.12
+          - requests==2.32.3
+          - types-requests==2.32.0.20241016
+          - pytest-mock==3.14.0
+          - pytest==8.3.4
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v1.19.0
+    hooks:
+      - id: mypy
+        additional_dependencies:
+          - loguru==0.7.3
+          - pydantic==2.12.4
+          - pydantic-settings==2.12
+          - requests==2.32.3
+          - types-requests==2.32.0.20241016
+          - pytest-mock==3.14.0
+          - pytest==8.3.4
