--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,15 @@ passlib = "==1.7.4"
 pypdf = "==5.1.0"
 sqlmodel = "==0.0.22"
 psycopg2-binary = "==2.9.10"
-fastapi = {extras = ["standard"] }
+fastapi = {extras = ["standard"], version = "==0.122.0"}
 bcrypt = "==4.3.0"
-pdfplumber = "*"
+pdfplumber = "==0.11.7"
 pydantic-settings = "==2.7.1"
 requests = "==2.32.5"
 beautifulsoup4 = "==4.14.2"
 python-jose = "==3.5.0"
+typing-extensions = "4.15.0"
+loguru = "0.7.3"
 
 [dev-packages]
 ruff = "==0.9.1"
@@ -31,4 +33,4 @@ python_version = "3.12"
 [scripts]
 format = "pre-commit run --all-files"
 test = "pytest --cov=turf_backend --cov-report term-missing:skip-covered --cov-report xml:coverage-report.xml --junitxml=coverage.xml tests"
-server = "sh -c 'docker compose up -d && uvicorn turf_backend.main:app --reload'"
+server = "sh -c 'docker compose up -d && uvicorn turf_backend.api.app:app --reload'"
