chore: clean up unused files and improve project structure

--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,6 @@ ENVIRONMENT="DEVELOPMENT"
 POSTGRES_USER="user"
 POSTGRES_PASSWORD="password"
 POSTGRES_HOST="localhost"
-DB_PORT=5432
+POSTGRES_PORT=5432
 POSTGRES_DATABASE="TURF"
-POSTGRES_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}"
+POSTGRES_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}"
